bugfix: Настроил работу gRPC
